@@ -1,16 +1,22 @@
 package com.campus.management.service;
 
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.campus.management.dto.DashboardChartCacheData;
+import com.campus.management.dto.HotActivityCacheItem;
 import com.campus.management.entity.Activity;
 import com.campus.management.entity.ActivityRegistration;
 import com.campus.management.entity.SysUser;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import java.time.Duration;
 import java.time.LocalDate;
-import java.util.ArrayList;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+import org.springframework.data.redis.RedisSystemException;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 
@@ -19,59 +25,51 @@ public class DashboardService {
 
     private static final String SUMMARY_CACHE_KEY = "dashboard:summary";
     private static final String HOT_ACTIVITY_CACHE_KEY = "dashboard:hotActivities";
+    private static final String CHART_CACHE_KEY = "dashboard:chartData";
     private static final Duration CACHE_TTL = Duration.ofMinutes(10);
-    private static final String USER_TOTAL_LABEL = "用户总数";
-    private static final String ACTIVITY_TOTAL_LABEL = "活动总数";
-    private static final String REGISTRATION_TOTAL_LABEL = "报名总数";
 
     private final UserService userService;
     private final ActivityService activityService;
     private final RegistrationService registrationService;
     private final StringRedisTemplate stringRedisTemplate;
+    private final ObjectMapper objectMapper;
 
     public DashboardService(UserService userService,
                             ActivityService activityService,
                             RegistrationService registrationService,
-                            StringRedisTemplate stringRedisTemplate) {
+                            StringRedisTemplate stringRedisTemplate,
+                            ObjectMapper objectMapper) {
         this.userService = userService;
         this.activityService = activityService;
         this.registrationService = registrationService;
         this.stringRedisTemplate = stringRedisTemplate;
+        this.objectMapper = objectMapper;
     }
 
     public Map<String, Long> getSummary() {
         List<String> cachedValues = stringRedisTemplate.opsForList().range(SUMMARY_CACHE_KEY, 0, -1);
         if (cachedValues != null && cachedValues.size() == 3) {
             Map<String, Long> cachedSummary = new LinkedHashMap<>();
-            cachedSummary.put(USER_TOTAL_LABEL, parseLong(cachedValues.get(0)));
-            cachedSummary.put(ACTIVITY_TOTAL_LABEL, parseLong(cachedValues.get(1)));
-            cachedSummary.put(REGISTRATION_TOTAL_LABEL, parseLong(cachedValues.get(2)));
+            cachedSummary.put("用户总数", parseLong(cachedValues.get(0)));
+            cachedSummary.put("活动总数", parseLong(cachedValues.get(1)));
+            cachedSummary.put("报名总数", parseLong(cachedValues.get(2)));
             return cachedSummary;
         }
 
         Map<String, Long> summary = new LinkedHashMap<>();
-        summary.put(USER_TOTAL_LABEL, userService.count(new LambdaQueryWrapper<SysUser>().eq(SysUser::getIsDeleted, 0)));
-        summary.put(ACTIVITY_TOTAL_LABEL, activityService.countActiveActivities());
-        summary.put(REGISTRATION_TOTAL_LABEL, registrationService.count(new LambdaQueryWrapper<ActivityRegistration>().eq(ActivityRegistration::getIsDeleted, 0)));
+        summary.put("用户总数", userService.count(new LambdaQueryWrapper<SysUser>().eq(SysUser::getIsDeleted, 0)));
+        summary.put("活动总数", activityService.countActiveActivities());
+        summary.put("报名总数", registrationService.count(new LambdaQueryWrapper<ActivityRegistration>().eq(ActivityRegistration::getIsDeleted, 0)));
         cacheSummary(summary);
         return summary;
     }
 
     public List<Activity> getHotActivities() {
-        List<String> cachedIds = stringRedisTemplate.opsForList().range(HOT_ACTIVITY_CACHE_KEY, 0, -1);
-        if (cachedIds != null && !cachedIds.isEmpty()) {
-            List<Activity> activities = new ArrayList<>();
-            for (String cachedId : cachedIds) {
-                try {
-                    Activity activity = activityService.getById(Long.parseLong(cachedId));
-                    if (activity != null && Integer.valueOf(0).equals(activity.getIsDeleted())) {
-                        activities.add(activity);
-                    }
-                } catch (NumberFormatException ignored) {
-                }
-            }
-            if (!activities.isEmpty()) {
-                return activities;
+        String cachedJson = readHotActivitiesCacheSafely();
+        if (cachedJson != null && !cachedJson.isBlank()) {
+            List<Activity> cachedActivities = parseCachedActivities(cachedJson);
+            if (!cachedActivities.isEmpty()) {
+                return cachedActivities;
             }
         }
 
@@ -81,10 +79,19 @@ public class DashboardService {
     }
 
     public Map<String, List<?>> getChartData() {
+        String cachedJson = readChartCacheSafely();
+        if (cachedJson != null && !cachedJson.isBlank()) {
+            Map<String, List<?>> cachedChartData = parseChartData(cachedJson);
+            if (!cachedChartData.isEmpty()) {
+                return cachedChartData;
+            }
+        }
+
         LinkedHashMap<String, List<?>> chartData = new LinkedHashMap<>();
         chartData.put("labels", buildDateLabels());
         chartData.put("activityCounts", buildDailyActivityCounts());
         chartData.put("registrationCounts", buildDailyRegistrationCounts());
+        cacheChartData(chartData);
         return chartData;
     }
 
@@ -126,9 +133,9 @@ public class DashboardService {
         stringRedisTemplate.delete(SUMMARY_CACHE_KEY);
         stringRedisTemplate.opsForList().rightPushAll(
             SUMMARY_CACHE_KEY,
-            String.valueOf(summary.getOrDefault(USER_TOTAL_LABEL, 0L)),
-            String.valueOf(summary.getOrDefault(ACTIVITY_TOTAL_LABEL, 0L)),
-            String.valueOf(summary.getOrDefault(REGISTRATION_TOTAL_LABEL, 0L))
+            String.valueOf(summary.getOrDefault("用户总数", 0L)),
+            String.valueOf(summary.getOrDefault("活动总数", 0L)),
+            String.valueOf(summary.getOrDefault("报名总数", 0L))
         );
         stringRedisTemplate.expire(SUMMARY_CACHE_KEY, CACHE_TTL);
     }
@@ -138,12 +145,120 @@ public class DashboardService {
         if (activities.isEmpty()) {
             return;
         }
-        List<String> values = activities.stream()
-            .map(Activity::getId)
+
+        List<HotActivityCacheItem> values = activities.stream()
+            .map(this::toCacheItem)
+            .collect(Collectors.toList());
+        try {
+            stringRedisTemplate.opsForValue().set(HOT_ACTIVITY_CACHE_KEY, objectMapper.writeValueAsString(values), CACHE_TTL);
+        } catch (JsonProcessingException exception) {
+            stringRedisTemplate.delete(HOT_ACTIVITY_CACHE_KEY);
+        }
+    }
+
+    private String readHotActivitiesCacheSafely() {
+        try {
+            return stringRedisTemplate.opsForValue().get(HOT_ACTIVITY_CACHE_KEY);
+        } catch (RedisSystemException exception) {
+            stringRedisTemplate.delete(HOT_ACTIVITY_CACHE_KEY);
+            return null;
+        }
+    }
+
+    private List<Activity> parseCachedActivities(String cachedJson) {
+        try {
+            List<HotActivityCacheItem> items = objectMapper.readValue(
+                cachedJson,
+                objectMapper.getTypeFactory().constructCollectionType(List.class, HotActivityCacheItem.class)
+            );
+            return items.stream()
+                .map(this::toActivity)
+                .collect(Collectors.toList());
+        } catch (JsonProcessingException exception) {
+            stringRedisTemplate.delete(HOT_ACTIVITY_CACHE_KEY);
+            return Collections.emptyList();
+        }
+    }
+
+    private HotActivityCacheItem toCacheItem(Activity activity) {
+        HotActivityCacheItem item = new HotActivityCacheItem();
+        item.setId(activity.getId());
+        item.setTitle(activity.getTitle());
+        item.setLocation(activity.getLocation());
+        item.setStartTime(activity.getStartTime());
+        item.setCurrentPeople(activity.getCurrentPeople());
+        item.setMaxPeople(activity.getMaxPeople());
+        return item;
+    }
+
+    private Activity toActivity(HotActivityCacheItem item) {
+        Activity activity = new Activity();
+        activity.setId(item.getId());
+        activity.setTitle(item.getTitle());
+        activity.setLocation(item.getLocation());
+        activity.setStartTime(item.getStartTime());
+        activity.setCurrentPeople(item.getCurrentPeople());
+        activity.setMaxPeople(item.getMaxPeople());
+        activity.setIsDeleted(0);
+        return activity;
+    }
+
+    private String readChartCacheSafely() {
+        try {
+            return stringRedisTemplate.opsForValue().get(CHART_CACHE_KEY);
+        } catch (RedisSystemException exception) {
+            stringRedisTemplate.delete(CHART_CACHE_KEY);
+            return null;
+        }
+    }
+
+    private void cacheChartData(Map<String, List<?>> chartData) {
+        DashboardChartCacheData cacheData = new DashboardChartCacheData();
+        cacheData.setLabels(castStringList(chartData.get("labels")));
+        cacheData.setActivityCounts(castLongList(chartData.get("activityCounts")));
+        cacheData.setRegistrationCounts(castLongList(chartData.get("registrationCounts")));
+        try {
+            stringRedisTemplate.opsForValue().set(CHART_CACHE_KEY, objectMapper.writeValueAsString(cacheData), CACHE_TTL);
+        } catch (JsonProcessingException exception) {
+            stringRedisTemplate.delete(CHART_CACHE_KEY);
+        }
+    }
+
+    private Map<String, List<?>> parseChartData(String cachedJson) {
+        try {
+            DashboardChartCacheData cacheData = objectMapper.readValue(cachedJson, DashboardChartCacheData.class);
+            LinkedHashMap<String, List<?>> chartData = new LinkedHashMap<>();
+            chartData.put("labels", cacheData.getLabels() == null ? Collections.emptyList() : cacheData.getLabels());
+            chartData.put("activityCounts", cacheData.getActivityCounts() == null ? Collections.emptyList() : cacheData.getActivityCounts());
+            chartData.put("registrationCounts", cacheData.getRegistrationCounts() == null ? Collections.emptyList() : cacheData.getRegistrationCounts());
+            return chartData;
+        } catch (JsonProcessingException exception) {
+            stringRedisTemplate.delete(CHART_CACHE_KEY);
+            return Collections.emptyMap();
+        }
+    }
+
+    private List<String> castStringList(List<?> values) {
+        if (values == null || values.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return values.stream()
             .map(String::valueOf)
-            .toList();
-        stringRedisTemplate.opsForList().rightPushAll(HOT_ACTIVITY_CACHE_KEY, values);
-        stringRedisTemplate.expire(HOT_ACTIVITY_CACHE_KEY, CACHE_TTL);
+            .collect(Collectors.toList());
+    }
+
+    private List<Long> castLongList(List<?> values) {
+        if (values == null || values.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return values.stream()
+            .map(value -> {
+                if (value instanceof Number number) {
+                    return number.longValue();
+                }
+                return parseLong(String.valueOf(value));
+            })
+            .collect(Collectors.toList());
     }
 
     private long parseLong(String value) {
